crates/nash-can/src/snapshots/nash_can__module__tests__alias_duplicate_type_param.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\ntype alias Bad a a = a\n"
---
[
    DuplicateAliasArg {
        type_name: "Bad",
        arg_name: "a",
        first: Region {
            start: Position {
                line: 3,
                column: 18,
            },
            end: Position {
                line: 3,
                column: 19,
            },
        },
        second: Region {
            start: Position {
                line: 3,
                column: 16,
            },
            end: Position {
                line: 3,
                column: 17,
            },
        },
    },
]
