crates/nash-can/src/snapshots/nash_can__module__tests__alias_unbound_type_var.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\ntype alias Bad = List a\n"
---
[
    TypeVarsMessedUpInAlias {
        region: Region {
            start: Position {
                line: 3,
                column: 1,
            },
            end: Position {
                line: 4,
                column: 1,
            },
        },
        name: "Bad",
        args: [],
        unused: [],
        unbound: [
            (
                "a",
                Region {
                    start: Position {
                        line: 3,
                        column: 23,
                    },
                    end: Position {
                        line: 3,
                        column: 24,
                    },
                },
            ),
        ],
    },
]
