crates/nash-can/src/snapshots/nash_can__module__tests__alias_unused_type_param.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\ntype alias Phantom a = Int\n"
---
[
    TypeVarsMessedUpInAlias {
        region: Region {
            start: Position {
                line: 3,
                column: 1,
            },
            end: Position {
                line: 4,
                column: 1,
            },
        },
        name: "Phantom",
        args: [
            "a",
        ],
        unused: [
            (
                "a",
                Region {
                    start: Position {
                        line: 3,
                        column: 20,
                    },
                    end: Position {
                        line: 3,
                        column: 21,
                    },
                },
            ),
        ],
        unbound: [],
    },
]
