crates/nash-can/src/snapshots/nash_can__module__tests__ambiguous_var.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\nimport Foo exposing (..)\n\nimport Bar exposing (..)\n\nx = baz\n"
---
[
    AmbiguousVar {
        region: Region {
            start: Position {
                line: 7,
                column: 5,
            },
            end: Position {
                line: 7,
                column: 8,
            },
        },
        prefix: None,
        name: "baz",
        first_module: ModuleName {
            package: None,
            name: "Foo",
        },
        other_modules: [
            ModuleName {
                package: None,
                name: "Bar",
            },
        ],
    },
]
