crates/nash-can/src/snapshots/nash_can__module__tests__binop_expression.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\nimport Basics exposing (..)\n\nx a b = a + b\n"
---
Module {
    name: ModuleName {
        package: None,
        name: "Main",
    },
    exports: Everything(
        Region {
            start: Position {
                line: 1,
                column: 22,
            },
            end: Position {
                line: 1,
                column: 26,
            },
        },
    ),
    docs: NoDocs(
        Region {
            start: Position {
                line: 1,
                column: 1,
            },
            end: Position {
                line: 6,
                column: 1,
            },
        },
    ),
    decls: Declare {
        definition: Def {
            name: Located {
                region: Region {
                    start: Position {
                        line: 5,
                        column: 1,
                    },
                    end: Position {
                        line: 5,
                        column: 2,
                    },
                },
                value: "x",
            },
            args: [
                Located {
                    region: Region {
                        start: Position {
                            line: 5,
                            column: 3,
                        },
                        end: Position {
                            line: 5,
                            column: 4,
                        },
                    },
                    value: Var(
                        "a",
                    ),
                },
                Located {
                    region: Region {
                        start: Position {
                            line: 5,
                            column: 5,
                        },
                        end: Position {
                            line: 5,
                            column: 6,
                        },
                    },
                    value: Var(
                        "b",
                    ),
                },
            ],
            body: Located {
                region: Region {
                    start: Position {
                        line: 5,
                        column: 9,
                    },
                    end: Position {
                        line: 5,
                        column: 14,
                    },
                },
                value: Binop {
                    symbol: "+",
                    reference: QualifiedName {
                        home: ModuleName {
                            package: None,
                            name: "Basics",
                        },
                        name: "add",
                    },
                    annotation: Annotation {
                        free_vars: [
                            "a",
                        ],
                        typ: Located {
                            region: Region {
                                start: Position {
                                    line: 0,
                                    column: 0,
                                },
                                end: Position {
                                    line: 0,
                                    column: 0,
                                },
                            },
                            value: Var(
                                "a",
                            ),
                        },
                    },
                    left: Located {
                        region: Region {
                            start: Position {
                                line: 5,
                                column: 9,
                            },
                            end: Position {
                                line: 5,
                                column: 10,
                            },
                        },
                        value: VarLocal(
                            "a",
                        ),
                    },
                    right: Located {
                        region: Region {
                            start: Position {
                                line: 5,
                                column: 13,
                            },
                            end: Position {
                                line: 5,
                                column: 14,
                            },
                        },
                        value: VarLocal(
                            "b",
                        ),
                    },
                },
            },
        },
        next: Empty,
    },
    unions: [],
    aliases: [],
    binops: [],
}
