crates/nash-can/src/snapshots/nash_can__module__tests__binop_function_must_be_top_level.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing ((|>))\n\ninfix left 6 (|>) = missing\n"
---
[
    BinopFunctionNotFound {
        region: Region {
            start: Position {
                line: 3,
                column: 1,
            },
            end: Position {
                line: 4,
                column: 1,
            },
        },
        op: "|>",
        function: "missing",
    },
]
